# scihfs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.dvc  .readthedocs.yaml  Dockerfile  Makefile  README.md  README.rst  classify.py  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codecov.yaml  devcontainer-image.yml  devcontainer-test_2.yml  devcontainer.yml  lint-test.yml  test_workflow.yml
data/: .gitignore  dataset_go_hagr.py  go_dag.gml.dvc
data/go_hagr/datasets/: dataset_Caenorhabditis elegans.npz  dataset_Drosophila melanogaster.npz  dataset_Mus musculus.npz  dataset_Saccharomyces cerevisiae.npz  go_dag.gml
doc/: README.md  api.rst  conf.py  index.rst  introduction.rst  preprocessing.rst  sg_execution_times.rst
doc/algorithms/: eager.rst  gtd.rst  hill_climbing.rst  hnb.rst  index.rst  lazy.rst  shsel.rst  tan.rst  tsel.rst
doc/experiments/: eagertable.csv  index.rst  lazytable.csv  lazytable2.csv
doc/get_started/: index.rst
examples/: eager_learning_example.py  ga-ex.py  ga_selector_example.py  lazy_learning_example.py
experiments/: experiments.py  experiments_eager.py
hfs/: __init__.py  data_utils.py  helpers.py  hiertan.py  metrics.py  preprocessing.py  pyitlib.py
hfs/data/: data_utils.py
hfs/hierarchical_selectors/: __init__.py  base.py  eagerHierarchicalFeatureSelector.py  gtd.py  hie_aode.py  hill_climbing.py  hnb.py  hnbs.py  lazyHierarchicalFeatureSelector.py  mr.py  shsel.py  tsel.py
hfs/selectors/: __init__.py  base.py  eagerHierarchicalFeatureSelector.py  gasel.py  gtd.py  hie_aode.py  hiertan.py  hill_climbing.py  hip.py  hnb.py  hnbs.py  lazyHierarchicalFeatureSelector.py  mr.py  rnb.py  shsel.py  tsel.py
hfs/tests/: _del.py  conftest.py  test_base.py  test_common.py  test_data_utils.py  test_feature_selection.py  test_feature_selection_filter.py  test_gasel.py  test_gtd.py  test_helpers.py  test_hie_aode.py  test_hiertan.py  test_hill_climbing.py  test_preprocessing.py  test_shsel.py  test_tsel.py
hfs/tests/fixtures/: conftest.py
synthetic/: .gitignore  dag.py  metrics.py  metrics.py.dvc  visualize.py  visualize.py.dvc
