[tool.poetry]
name = "hfs"
version = "0.1.0"
description = ""
authors = ["Jasperhino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
info-gain = "^1.0.1"
kgextension = "^0.1.1"
networkx = "^3.2.1"
numpy = "^1.26.2"
pandas = "1.5.3"
scikit-learn = "1.5.2"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.4"
black = "^24"
mypy = "^1.13.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
setuptools = "58.5.3"
sphinxcontrib-bibtex = "^2.6.1"
sphinx-gallery = "^0.15.0"
sphinx-rtd-theme = "^2.0.0"
numpydoc = "^1.6.0"
wandb = "^0.16.1"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | piitlib.py
)/
'''

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["numpy", "pandas"]
skip = [".venv", "build", "dist"]
