[metadata]
description-file = README.rst

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules

[mypy]
python_version = 3.10
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
strict = True
exclude = build|dist|\.venv

[mypy-packagename.*]
ignore_errors = True
